# modern-sentiment-analysis-platform

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  init_db.py  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py  websocket.py
backend/models/: database.py
backend/services/: aggregator.py  alerting.py  sentiment_analyzer.py
backend/tests/unit/: test_alerting.py  test_sentiment_analyzer.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: index.css
frontend/src/components/: Dashboard.jsx  DistributionChart.jsx  LiveFeed.jsx  SentimentChart.jsx
frontend/src/services/: api.js
ingester/: Dockerfile  ingester.py  pyproject.toml  requirements.txt
ingester/tests/: test_ingester.py
worker/: .dockerignore  Dockerfile  processor.py  pyproject.toml  requirements.txt  worker.py
worker/tests/: test_worker.py
