[project]
name = "ingester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
